syntax = "proto3";

option go_package = "./";

package user;

service UserService {
  rpc CheckUserExists(UserExistsRequest) returns (UserExistsResponse) {}
}

message UserExistsRequest {
  string token = 1;
}

message UserExistsResponse {
  bool exists = 1;
}
